--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -103,3 +103,104 @@
   author={Guner, Abdulkadir},
   year={2002}
 }
+
+@article{SDRtheory,
+  title={Software-defined radio: a brief overview},
+  author={Sadiku, Mathew NO and Akujuobi, Cajetan M},
+  journal={Ieee Potentials},
+  volume={23},
+  number={4},
+  pages={14--15},
+  year={2004},
+  publisher={IEEE}
+}
+
+@mastersthesis{FMlowCost,
+  author = {Sendall, Joshua Leigh},
+  title = {Implementation of a low-cost bistatic radar},
+  year = {2016},
+  url = {http://hdl.handle.net/2263/61335}
+}
+
+@misc{SDRdongle,
+  author = {{RTL-SDR.com}},
+  title = {Buy RTL-SDR Dongles (RTL2832U)},
+  howpublished = {\url{https://www.rtl-sdr.com/buy-rtl-sdr-dvb-t-dongles/}},
+  note = {Accessed: 2024-03-11},
+  year = 2024
+}
+
+@phdthesis{DABsamplingChain,
+  title={DAB Processing Chain for Passive Radar Applications},
+  author={Tilbury, C},
+  year={2020},
+  school={BS Thesis, Dept Electrical Eng, UCT, Cape Town}
+}
+
+@INPROCEEDINGS{DABsingleRadar,
+  author={Barott, William C. and Engle, Justin},
+  booktitle={2014 IEEE Radar Conference}, 
+  title={Single-antenna ATSC passive radar observations with remodulation and keystone formatting}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={0159-0163},
+  keywords={Digital TV;Time-frequency analysis;Spaceborne radar;Passive radar;Surveillance},
+  doi={10.1109/RADAR.2014.6875576}}
+
+@ARTICLE{DSPdab,
+  author={Berger, Christian R. and Demissie, Bruno and Heckenbach, JÖrg and Willett, Peter and Zhou, Shengli},
+  journal={IEEE Journal of Selected Topics in Signal Processing}, 
+  title={Signal Processing for Passive Radar Using OFDM Waveforms}, 
+  year={2010},
+  volume={4},
+  number={1},
+  pages={226-238},
+  keywords={Radar signal processing;Passive radar;OFDM;Digital video broadcasting;Matched filters;Signal processing algorithms;Video signal processing;Digital audio broadcasting;Decoding;Frequency division multiplexing;Compressed sensing;multistatic radar;MUSIC;radar processing;sparse estimation;subspace algorithms},
+  doi={10.1109/JSTSP.2009.2038977}}
+
+  @ARTICLE{DSPfm,
+  author={Moscardini, C. and Petri, D. and Capria, A. and Conti, M. and Martorella, M. and Berizzi, F.},
+  journal={IEEE Transactions on Aerospace and Electronic Systems}, 
+  title={Batches algorithm for passive radar: a theoretical analysis}, 
+  year={2015},
+  volume={51},
+  number={2},
+  pages={1475-1487},
+  keywords={Algorithm design and analysis;Doppler effect;Signal processing algorithms;Passive radar;Noise;Surveillance},
+  doi={10.1109/TAES.2015.130407}}
+
+  @INPROCEEDINGS{DABprocessingChain,
+  author={Schüpbach, Christof and Welschen, Samuel},
+  booktitle={2018 19th International Radar Symposium (IRS)}, 
+  title={Direct Signal Interference Mitigation By Slow-Time Frequency Correction For OFDM-Based Passive Radar}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-10},
+  keywords={OFDM;Surveillance;Receivers;Doppler effect;Interference;Passive radar;Delays},
+  doi={10.23919/IRS.2018.8448150}}
+
+  @INPROCEEDINGS{UAVdab,
+  author={Schüpbach, Christof and Patry, Christian and Maasdorp, Francois and Böniger, Urs and Wellig, Peter},
+  booktitle={2017 IEEE Radar Conference (RadarConf)}, 
+  title={Micro-UAV detection using DAB-based passive radar}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1037-1040},
+  keywords={Passive radar;Doppler effect;Receivers;Radio transmitters;Delays;Radar cross-sections},
+  doi={10.1109/RADAR.2017.7944357}}
+
+% CITED BY EVERYONE
+@article{detectionDABmodulation, 
+author = {Poullin, D.},
+year = {2005},
+month = {07},
+pages = {143 - 152},
+title = {Passive detection using digital broadcasters (DAB, DVB) with COFDM modulation},
+volume = {152},
+journal = {Radar, Sonar and Navigation, IEE Proceedings -},
+doi = {10.1049/ip-rsn:20045017}
+}
+
