--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -204,3 +204,22 @@ journal = {Radar, Sonar and Navigation, IEE Proceedings -},
 doi = {10.1049/ip-rsn:20045017}
 }
 
+@INPROCEEDINGS{AntennaHW,
+  author={Moallemizadeh, A. and Hassani, H. R. and Nezhad, S. Mohammad Ali},
+  booktitle={2012 6th European Conference on Antennas and Propagation (EUCAP)}, 
+  title={Wide bandwidth and small size LPDA antenna}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={1-3},
+  keywords={Dipole antennas;Fractals;Bandwidth;Resonant frequency;Microstrip antennas;Shape;Substrates;LPDA antenna;fractal;wide bandwidth},
+  doi={10.1109/EuCAP.2012.6206312}}
+
+
+@misc{Cilentium,
+  author = {Stew Magnuson},
+  title = {`Passive' Radar Can Give Soldiers Stealth in Urban Battlegrounds},
+  year = {2023},
+  howpublished = {\url{http://nationaldefensemagazine.org/articles/2023/3/28/passive-radar-can-give-soldiers-stealth-in-urban-battlegrounds}},
+  note = {Accessed: 2024-03-11}
+}
